[gd_scene format=3 uid="uid://0h2g5v8mjvyq"]

[ext_resource type="Script" uid="uid://uqw5h5vdi8ye" path="res://editor/dialog_node.gd" id="1_dbs6x"]
[ext_resource type="Texture2D" uid="uid://cs22pxk547kae" path="res://assets/art/textboxbordered.png" id="2_gdc6m"]

[node name="DialogNode" type="VBoxContainer" unique_id=587451650]
script = ExtResource("1_dbs6x")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=907568434]
layout_mode = 2
alignment = 1

[node name="Trigger" type="OptionButton" parent="HBoxContainer" unique_id=247872742]
layout_mode = 2
size_flags_horizontal = 4
selected = 8
item_count = 11
popup/item_0/text = "All Success"
popup/item_0/id = 0
popup/item_1/text = "Under Funny"
popup/item_1/id = 1
popup/item_2/text = "Under Sentiment"
popup/item_2/id = 2
popup/item_3/text = "Under Flirty"
popup/item_3/id = 3
popup/item_4/text = "Over Funny"
popup/item_4/id = 4
popup/item_5/text = "Over Sentiment"
popup/item_5/id = 5
popup/item_6/text = "Over Flirty"
popup/item_6/id = 6
popup/item_7/text = "All Over"
popup/item_7/id = 7
popup/item_8/text = "All Under"
popup/item_8/id = 8
popup/item_9/text = "All Fail"
popup/item_9/id = 9
popup/item_10/text = "Default"
popup/item_10/id = 10

[node name="Open" type="Button" parent="HBoxContainer" unique_id=1382976947]
layout_mode = 2
size_flags_horizontal = 4
text = "Open"

[node name="Numbers" type="Label" parent="HBoxContainer" unique_id=1933723006]
layout_mode = 2
text = "(0; 0) (0; 0) (0; 0)"

[node name="DialogRect" type="TextureRect" parent="." unique_id=951165780]
layout_mode = 2
texture = ExtResource("2_gdc6m")

[node name="DialogText" type="Label" parent="DialogRect" unique_id=186081288]
custom_minimum_size = Vector2(336, 120)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 3

[connection signal="item_selected" from="HBoxContainer/Trigger" to="." method="_on_trigger_changed"]
[connection signal="pressed" from="HBoxContainer/Open" to="." method="_on_open_pressed"]
